[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/standard-game/StandardGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/PressStart.tres" type="DynamicFont" id=2]
[ext_resource path="res://screens/main-menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/player/Player.png" type="Texture" id=4]
[ext_resource path="res://assets/props/menu-sound.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/player/PlayerParticle.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/Particle.png" type="Texture" id=7]
[ext_resource path="res://assets/music/Menu.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="StandardGame" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -786454, 8, 0, -786453, 8, 0, -786452, 8, 0, -786451, 8, 0, -786450, 8, 0, -786449, 8, 0, -786448, 8, 0, -786447, 8, 0, -786446, 8, 0, -786445, 8, 0, -786444, 8, 0, -786443, 8, 0, -786442, 8, 0, -786441, 8, 0, -786440, 8, 0, -786439, 8, 0, -786438, 8, 0, -786437, 8, 0, -786436, 8, 0, -786435, 8, 0, -786434, 8, 0, -786433, 8, 0, -851968, 8, 0, -851967, 8, 0, -851966, 8, 0, -851965, 8, 0, -851964, 8, 0, -851963, 8, 0, -851962, 8, 0, -851961, 8, 0, -851960, 8, 0, -851959, 8, 0, -851958, 8, 0, -851957, 8, 0, -851956, 8, 0, -851955, 8, 0, -851954, 8, 0, -851953, 8, 0, -851952, 8, 0, -851951, 8, 0, -851950, 8, 0, -851949, 8, 0, -851948, 8, 0, -851947, 8, 0, -720918, 8, 0, -720917, 8, 0, -720916, 8, 0, -720915, 8, 0, -720914, 8, 0, -720913, 8, 0, -720912, 8, 0, -720911, 8, 0, -720910, 8, 0, -720909, 8, 0, -720908, 8, 0, -720907, 8, 0, -720906, 8, 0, -720905, 8, 0, -720904, 8, 0, -720903, 8, 0, -720902, 8, 0, -720901, 8, 0, -720900, 8, 0, -720899, 8, 0, -720898, 8, 0, -720897, 8, 0, -786432, 8, 0, -786431, 8, 0, -786430, 8, 0, -786429, 8, 0, -786428, 8, 0, -786427, 8, 0, -786426, 8, 0, -786425, 8, 0, -786424, 8, 0, -786423, 8, 0, -786422, 8, 0, -786421, 8, 0, -786420, 8, 0, -786419, 8, 0, -786418, 8, 0, -786417, 8, 0, -786416, 8, 0, -786415, 8, 0, -786414, 8, 0, -786413, 8, 0, -786412, 8, 0, -786411, 8, 0, -655382, 8, 0, -655381, 8, 0, -655380, 8, 0, -655379, 8, 0, -655378, 8, 0, -655377, 8, 0, -655376, 8, 0, -655375, 8, 0, -655374, 8, 0, -655373, 8, 0, -655372, 8, 0, -655371, 8, 0, -655370, 8, 0, -655369, 8, 0, -655368, 8, 0, -655367, 8, 0, -655366, 8, 0, -655365, 8, 0, -655364, 8, 0, -655363, 8, 0, -655362, 8, 0, -655361, 8, 0, -720896, 8, 0, -720895, 8, 0, -720894, 8, 0, -720893, 8, 0, -720892, 8, 0, -720891, 8, 0, -720890, 8, 0, -720889, 8, 0, -720888, 8, 0, -720887, 8, 0, -720886, 8, 0, -720885, 8, 0, -720884, 8, 0, -720883, 8, 0, -720882, 8, 0, -720881, 8, 0, -720880, 8, 0, -720879, 8, 0, -720878, 8, 0, -720877, 8, 0, -720876, 8, 0, -720875, 8, 0, -589846, 8, 0, -589845, 8, 0, -589844, 8, 0, -589843, 8, 0, -589842, 8, 0, -589841, 8, 0, -589840, 8, 0, -589839, 8, 0, -589838, 8, 0, -589837, 8, 0, -589836, 8, 0, -589835, 8, 0, -589834, 8, 0, -589833, 4, 0, -589832, 5, 0, -589831, 5, 0, -589830, 5, 0, -589829, 5, 0, -589828, 5, 0, -589827, 5, 0, -589826, 5, 0, -589825, 5, 0, -655360, 5, 0, -655359, 5, 0, -655358, 5, 0, -655357, 5, 0, -655356, 5, 0, -655355, 5, 0, -655354, 5, 0, -655353, 5, 0, -655352, 6, 0, -655351, 8, 0, -655350, 8, 0, -655349, 8, 0, -655348, 8, 0, -655347, 8, 0, -655346, 8, 0, -655345, 8, 0, -655344, 8, 0, -655343, 8, 0, -655342, 8, 0, -655341, 8, 0, -655340, 8, 0, -655339, 8, 0, -524310, 8, 0, -524309, 8, 0, -524308, 8, 0, -524307, 8, 0, -524306, 8, 0, -524305, 8, 0, -524304, 8, 0, -524303, 8, 0, -524302, 8, 0, -524301, 8, 0, -524300, 8, 0, -524299, 8, 0, -524298, 8, 0, -524297, 7, 0, -524296, 8, 0, -524295, 8, 0, -524294, 8, 0, -524293, 8, 0, -524292, 8, 0, -524291, 8, 0, -524290, 8, 0, -524289, 8, 0, -589824, 8, 0, -589823, 8, 0, -589822, 8, 0, -589821, 8, 0, -589820, 8, 0, -589819, 8, 0, -589818, 8, 0, -589817, 8, 0, -589816, 9, 0, -589815, 8, 0, -589814, 8, 0, -589813, 8, 0, -589812, 8, 0, -589811, 8, 0, -589810, 8, 0, -589809, 8, 0, -589808, 8, 0, -589807, 8, 0, -589806, 8, 0, -589805, 8, 0, -589804, 8, 0, -589803, 8, 0, -458774, 8, 0, -458773, 8, 0, -458772, 8, 0, -458771, 8, 0, -458770, 8, 0, -458769, 8, 0, -458768, 8, 0, -458767, 8, 0, -458766, 8, 0, -458765, 8, 0, -458764, 8, 0, -458763, 8, 0, -458762, 8, 0, -458761, 10, 0, -458760, 11, 0, -458759, 11, 0, -458758, 11, 0, -458757, 11, 0, -458756, 11, 0, -458755, 11, 0, -458754, 11, 0, -458753, 11, 0, -524288, 11, 0, -524287, 11, 0, -524286, 11, 0, -524285, 11, 0, -524284, 11, 0, -524283, 11, 0, -524282, 11, 0, -524281, 11, 0, -524280, 12, 0, -524279, 8, 0, -524278, 8, 0, -524277, 8, 0, -524276, 8, 0, -524275, 8, 0, -524274, 8, 0, -524273, 8, 0, -524272, 8, 0, -524271, 8, 0, -524270, 8, 0, -524269, 8, 0, -524268, 8, 0, -524267, 8, 0, -393238, 8, 0, -393237, 8, 0, -393236, 8, 0, -393235, 8, 0, -393234, 8, 0, -393233, 8, 0, -393232, 8, 0, -393231, 8, 0, -393230, 8, 0, -393229, 8, 0, -393228, 8, 0, -393227, 8, 0, -393226, 8, 0, -393225, 8, 0, -393224, 8, 0, -393223, 8, 0, -393222, 8, 0, -393221, 8, 0, -393220, 8, 0, -393219, 8, 0, -393218, 8, 0, -393217, 8, 0, -458752, 8, 0, -458751, 8, 0, -458750, 8, 0, -458749, 8, 0, -458748, 8, 0, -458747, 8, 0, -458746, 8, 0, -458745, 8, 0, -458744, 8, 0, -458743, 8, 0, -458742, 8, 0, -458741, 8, 0, -458740, 8, 0, -458739, 8, 0, -458738, 8, 0, -458737, 8, 0, -458736, 8, 0, -458735, 8, 0, -458734, 8, 0, -458733, 8, 0, -458732, 8, 0, -458731, 8, 0, -327702, 8, 0, -327701, 8, 0, -327700, 8, 0, -327699, 8, 0, -327698, 8, 0, -327697, 8, 0, -327696, 8, 0, -327695, 8, 0, -327694, 8, 0, -327693, 8, 0, -327692, 8, 0, -327691, 8, 0, -327690, 8, 0, -327689, 8, 0, -327688, 8, 0, -327687, 8, 0, -327686, 8, 0, -327685, 8, 0, -327684, 8, 0, -327683, 8, 0, -327682, 8, 0, -327681, 8, 0, -393216, 8, 0, -393215, 8, 0, -393214, 8, 0, -393213, 8, 0, -393212, 8, 0, -393211, 8, 0, -393210, 8, 0, -393209, 8, 0, -393208, 8, 0, -393207, 8, 0, -393206, 8, 0, -393205, 8, 0, -393204, 8, 0, -393203, 8, 0, -393202, 8, 0, -393201, 8, 0, -393200, 8, 0, -393199, 8, 0, -393198, 8, 0, -393197, 8, 0, -393196, 8, 0, -393195, 8, 0, -262166, 8, 0, -262165, 8, 0, -262164, 8, 0, -262163, 8, 0, -262162, 8, 0, -262161, 8, 0, -262160, 8, 0, -262159, 8, 0, -262158, 8, 0, -262157, 8, 0, -262156, 8, 0, -262155, 8, 0, -262154, 8, 0, -262153, 8, 0, -262152, 8, 0, -262151, 8, 0, -262150, 8, 0, -262149, 8, 0, -262148, 8, 0, -262147, 8, 0, -262146, 8, 0, -262145, 8, 0, -327680, 8, 0, -327679, 8, 0, -327678, 8, 0, -327677, 8, 0, -327676, 8, 0, -327675, 8, 0, -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -327669, 8, 0, -327668, 8, 0, -327667, 8, 0, -327666, 8, 0, -327665, 8, 0, -327664, 8, 0, -327663, 8, 0, -327662, 8, 0, -327661, 8, 0, -327660, 8, 0, -327659, 8, 0, -196630, 8, 0, -196629, 8, 0, -196628, 8, 0, -196627, 8, 0, -196626, 8, 0, -196625, 8, 0, -196624, 8, 0, -196623, 8, 0, -196622, 8, 0, -196621, 8, 0, -196620, 8, 0, -196619, 8, 0, -196618, 8, 0, -196617, 8, 0, -196616, 8, 0, -196615, 8, 0, -196614, 8, 0, -196613, 8, 0, -196612, 8, 0, -196611, 8, 0, -196610, 8, 0, -196609, 8, 0, -262144, 8, 0, -262143, 8, 0, -262142, 8, 0, -262141, 8, 0, -262140, 8, 0, -262139, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 8, 0, -262134, 8, 0, -262133, 8, 0, -262132, 8, 0, -262131, 8, 0, -262130, 8, 0, -262129, 8, 0, -262128, 8, 0, -262127, 8, 0, -262126, 8, 0, -262125, 8, 0, -262124, 8, 0, -262123, 8, 0, -131094, 8, 0, -131093, 8, 0, -131092, 8, 0, -131091, 8, 0, -131090, 8, 0, -131089, 8, 0, -131088, 8, 0, -131087, 8, 0, -131086, 8, 0, -131085, 8, 0, -131084, 8, 0, -131083, 8, 0, -131082, 8, 0, -131081, 8, 0, -131080, 8, 0, -131079, 8, 0, -131078, 8, 0, -131077, 8, 0, -131076, 8, 0, -131075, 8, 0, -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -196597, 8, 0, -196596, 8, 0, -196595, 8, 0, -196594, 8, 0, -196593, 8, 0, -196592, 8, 0, -196591, 8, 0, -196590, 8, 0, -196589, 8, 0, -196588, 8, 0, -196587, 8, 0, -65558, 8, 0, -65557, 8, 0, -65556, 8, 0, -65555, 8, 0, -65554, 8, 0, -65553, 8, 0, -65552, 8, 0, -65551, 8, 0, -65550, 8, 0, -65549, 8, 0, -65548, 8, 0, -65547, 8, 0, -65546, 8, 0, -65545, 8, 0, -65544, 8, 0, -65543, 8, 0, -65542, 8, 0, -65541, 8, 0, -65540, 8, 0, -65539, 8, 0, -65538, 8, 0, -65537, 8, 0, -131072, 8, 0, -131071, 8, 0, -131070, 8, 0, -131069, 8, 0, -131068, 8, 0, -131067, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -131061, 8, 0, -131060, 8, 0, -131059, 8, 0, -131058, 8, 0, -131057, 8, 0, -131056, 8, 0, -131055, 8, 0, -131054, 8, 0, -131053, 8, 0, -131052, 8, 0, -131051, 8, 0, -22, 8, 0, -21, 8, 0, -20, 8, 0, -19, 8, 0, -18, 8, 0, -17, 8, 0, -16, 8, 0, -15, 8, 0, -14, 8, 0, -13, 8, 0, -12, 8, 0, -11, 8, 0, -10, 8, 0, -9, 8, 0, -8, 8, 0, -7, 8, 0, -6, 8, 0, -5, 8, 0, -4, 8, 0, -3, 8, 0, -2, 8, 0, -1, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 8, 0, -65532, 8, 0, -65531, 8, 0, -65530, 8, 0, -65529, 8, 0, -65528, 8, 0, -65527, 8, 0, -65526, 8, 0, -65525, 8, 0, -65524, 8, 0, -65523, 8, 0, -65522, 8, 0, -65521, 8, 0, -65520, 8, 0, -65519, 8, 0, -65518, 8, 0, -65517, 8, 0, -65516, 8, 0, -65515, 8, 0, 65514, 8, 0, 65515, 8, 0, 65516, 8, 0, 65517, 8, 0, 65518, 8, 0, 65519, 8, 0, 65520, 8, 0, 65521, 8, 0, 65522, 8, 0, 65523, 8, 0, 65524, 8, 0, 65525, 8, 0, 65526, 8, 0, 65527, 8, 0, 65528, 8, 0, 65529, 8, 0, 65530, 8, 0, 65531, 8, 0, 65532, 8, 0, 65533, 8, 0, 65534, 8, 0, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 17, 8, 0, 18, 8, 0, 19, 8, 0, 20, 8, 0, 21, 8, 0, 131050, 8, 0, 131051, 8, 0, 131052, 8, 0, 131053, 8, 0, 131054, 8, 0, 131055, 8, 0, 131056, 8, 0, 131057, 8, 0, 131058, 8, 0, 131059, 8, 0, 131060, 8, 0, 131061, 8, 0, 131062, 8, 0, 131063, 8, 0, 131064, 8, 0, 131065, 8, 0, 131066, 8, 0, 131067, 8, 0, 131068, 8, 0, 131069, 8, 0, 131070, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65555, 8, 0, 65556, 8, 0, 65557, 8, 0, 196586, 8, 0, 196587, 8, 0, 196588, 8, 0, 196589, 8, 0, 196590, 8, 0, 196591, 8, 0, 196592, 8, 0, 196593, 8, 0, 196594, 8, 0, 196595, 8, 0, 196596, 8, 0, 196597, 8, 0, 196598, 8, 0, 196599, 8, 0, 196600, 8, 0, 196601, 8, 0, 196602, 8, 0, 196603, 8, 0, 196604, 8, 0, 196605, 8, 0, 196606, 8, 0, 196607, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 8, 0, 131086, 8, 0, 131087, 8, 0, 131088, 8, 0, 131089, 8, 0, 131090, 8, 0, 131091, 8, 0, 131092, 8, 0, 131093, 8, 0, 262122, 8, 0, 262123, 8, 0, 262124, 8, 0, 262125, 8, 0, 262126, 8, 0, 262127, 8, 0, 262128, 8, 0, 262129, 8, 0, 262130, 8, 0, 262131, 8, 0, 262132, 8, 0, 262133, 8, 0, 262134, 8, 0, 262135, 8, 0, 262136, 8, 0, 262137, 8, 0, 262138, 8, 0, 262139, 8, 0, 262140, 8, 0, 262141, 8, 0, 262142, 8, 0, 262143, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 8, 0, 196621, 8, 0, 196622, 8, 0, 196623, 8, 0, 196624, 8, 0, 196625, 8, 0, 196626, 8, 0, 196627, 8, 0, 196628, 8, 0, 196629, 8, 0, 327658, 8, 0, 327659, 8, 0, 327660, 8, 0, 327661, 8, 0, 327662, 8, 0, 327663, 8, 0, 327664, 8, 0, 327665, 8, 0, 327666, 8, 0, 327667, 8, 0, 327668, 8, 0, 327669, 8, 0, 327670, 8, 0, 327671, 8, 0, 327672, 8, 0, 327673, 8, 0, 327674, 8, 0, 327675, 8, 0, 327676, 8, 0, 327677, 8, 0, 327678, 8, 0, 327679, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 262156, 8, 0, 262157, 8, 0, 262158, 8, 0, 262159, 8, 0, 262160, 8, 0, 262161, 8, 0, 262162, 8, 0, 262163, 8, 0, 262164, 8, 0, 262165, 8, 0, 393194, 8, 0, 393195, 8, 0, 393196, 8, 0, 393197, 8, 0, 393198, 8, 0, 393199, 8, 0, 393200, 8, 0, 393201, 8, 0, 393202, 8, 0, 393203, 8, 0, 393204, 8, 0, 393205, 8, 0, 393206, 8, 0, 393207, 8, 0, 393208, 8, 0, 393209, 8, 0, 393210, 8, 0, 393211, 8, 0, 393212, 8, 0, 393213, 8, 0, 393214, 8, 0, 393215, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327693, 8, 0, 327694, 8, 0, 327695, 8, 0, 327696, 8, 0, 327697, 8, 0, 327698, 8, 0, 327699, 8, 0, 327700, 8, 0, 327701, 8, 0, 458730, 8, 0, 458731, 8, 0, 458732, 8, 0, 458733, 8, 0, 458734, 8, 0, 458735, 8, 0, 458736, 8, 0, 458737, 8, 0, 458738, 8, 0, 458739, 8, 0, 458740, 8, 0, 458741, 8, 0, 458742, 8, 0, 458743, 8, 0, 458744, 8, 0, 458745, 8, 0, 458746, 8, 0, 458747, 8, 0, 458748, 8, 0, 458749, 8, 0, 458750, 8, 0, 458751, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 8, 0, 393232, 8, 0, 393233, 8, 0, 393234, 8, 0, 393235, 8, 0, 393236, 8, 0, 393237, 8, 0, 524266, 8, 0, 524267, 8, 0, 524268, 8, 0, 524269, 8, 0, 524270, 8, 0, 524271, 8, 0, 524272, 8, 0, 524273, 8, 0, 524274, 8, 0, 524275, 8, 0, 524276, 8, 0, 524277, 8, 0, 524278, 8, 0, 524279, 8, 0, 524280, 8, 0, 524281, 8, 0, 524282, 8, 0, 524283, 8, 0, 524284, 8, 0, 524285, 8, 0, 524286, 8, 0, 524287, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 8, 0, 589802, 8, 0, 589803, 8, 0, 589804, 8, 0, 589805, 8, 0, 589806, 8, 0, 589807, 8, 0, 589808, 8, 0, 589809, 8, 0, 589810, 8, 0, 589811, 8, 0, 589812, 8, 0, 589813, 8, 0, 589814, 8, 0, 589815, 8, 0, 589816, 8, 0, 589817, 8, 0, 589818, 8, 0, 589819, 8, 0, 589820, 8, 0, 589821, 8, 0, 589822, 8, 0, 589823, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 524308, 8, 0, 524309, 8, 0, 655338, 8, 0, 655339, 8, 0, 655340, 8, 0, 655341, 8, 0, 655342, 8, 0, 655343, 8, 0, 655344, 8, 0, 655345, 8, 0, 655346, 8, 0, 655347, 8, 0, 655348, 8, 0, 655349, 8, 0, 655350, 8, 0, 655351, 8, 0, 655352, 8, 0, 655353, 8, 0, 655354, 8, 0, 655355, 8, 0, 655356, 8, 0, 655357, 8, 0, 655358, 8, 0, 655359, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589840, 8, 0, 589841, 8, 0, 589842, 8, 0, 589843, 8, 0, 589844, 8, 0, 589845, 8, 0, 720874, 8, 0, 720875, 8, 0, 720876, 8, 0, 720877, 8, 0, 720878, 8, 0, 720879, 8, 0, 720880, 8, 0, 720881, 8, 0, 720882, 8, 0, 720883, 8, 0, 720884, 8, 0, 720885, 8, 0, 720886, 8, 0, 720887, 8, 0, 720888, 8, 0, 720889, 8, 0, 720890, 8, 0, 720891, 8, 0, 720892, 8, 0, 720893, 8, 0, 720894, 8, 0, 720895, 8, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 655377, 8, 0, 655378, 8, 0, 655379, 8, 0, 655380, 8, 0, 655381, 8, 0, 786410, 8, 0, 786411, 8, 0, 786412, 8, 0, 786413, 8, 0, 786414, 8, 0, 786415, 8, 0, 786416, 8, 0, 786417, 8, 0, 786418, 8, 0, 786419, 8, 0, 786420, 8, 0, 786421, 8, 0, 786422, 8, 0, 786423, 8, 0, 786424, 8, 0, 786425, 8, 0, 786426, 8, 0, 786427, 8, 0, 786428, 8, 0, 786429, 8, 0, 786430, 8, 0, 786431, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 8, 0, 720914, 8, 0, 720915, 8, 0, 720916, 8, 0, 720917, 8, 0, 851946, 8, 0, 851947, 8, 0, 851948, 8, 0, 851949, 8, 0, 851950, 8, 0, 851951, 8, 0, 851952, 8, 0, 851953, 8, 0, 851954, 8, 0, 851955, 8, 0, 851956, 8, 0, 851957, 8, 0, 851958, 8, 0, 851959, 8, 0, 851960, 8, 0, 851961, 8, 0, 851962, 8, 0, 851963, 8, 0, 851964, 8, 0, 851965, 8, 0, 851966, 8, 0, 851967, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 8, 0, 786444, 8, 0, 786445, 8, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786450, 8, 0, 786451, 8, 0, 786452, 8, 0, 786453, 8, 0 )

[node name="MenuButtons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="MenuButtons"]
margin_left = -79.0
margin_top = -21.0
margin_right = 80.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresButton" type="Button" parent="MenuButtons"]
margin_left = -80.0
margin_top = 7.0
margin_right = 81.0
margin_bottom = 27.0
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Highscores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MenuButtons"]
visible = false
margin_left = -80.0
margin_top = 35.0
margin_right = 81.0
margin_bottom = 55.0
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -119.0
margin_top = -141.0
margin_right = 121.0
margin_bottom = -127.0
custom_fonts/font = ExtResource( 2 )
text = "Ultra Asteroid Shape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Node2D" parent="."]
position = Vector2( 0, -11 )

[node name="Sprite" type="Sprite" parent="Cursor"]
position = Vector2( -80, 0 )
rotation = 1.5708
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Sprite2" type="Sprite" parent="Cursor"]
position = Vector2( 80, 0 )
rotation = -1.5708
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="FlashTimer" type="Timer" parent="Cursor"]

[node name="HideTimer" type="Timer" parent="Cursor"]

[node name="Sounds" type="Node" parent="."]

[node name="Menu" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Particles" type="Node" parent="."]

[node name="GreyParticles" type="CPUParticles2D" parent="Particles"]
amount = 50
lifetime = 5.0
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 400 )
gravity = Vector2( 0, 0 )
initial_velocity = 21.51
initial_velocity_random = 0.27
orbit_velocity = 0.05
orbit_velocity_random = 0.39
hue_variation = -0.28
hue_variation_random = 0.48

[node name="GoldParticles" type="CPUParticles2D" parent="Particles"]
amount = 60
lifetime = 5.0
texture = ExtResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 400 )
gravity = Vector2( 0, 0 )
initial_velocity = 32.26
initial_velocity_random = 0.17
orbit_velocity = 0.05
orbit_velocity_random = 0.15

[node name="MenuTrack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
